# xr_teleoperate

./: .gitignore  .gitmodules  CHANGELOG_zh-CN.md  README.md  README_zh-CN.md  pixi.toml
assets/g1_D/: g1_d.urdf
assets/inspire_hand/: inspire_hand.yml
assets/unitree_hand/: unitree_dex3.yml
teleop/: teleop_hand_and_arm.py
teleop/robot_control/: hand_retargeting.py  mobile_control.py  robot_arm.py  robot_arm_ik.py  robot_hand_unitree.py
teleop/unitree_schema/: LICENSE  README.md  pyproject.toml
teleop/unitree_schema/src/unitree_schema/: __init__.py  recorder.py  rerun_visualizer.py  schema.py
teleop/utils/: gravity_feedforward.py  instruction_map.py  rerun_visualizer.py
